--- a/css/index.css
+++ b/css/index.css
@@ -56,3 +56,25 @@ body  {
         border: 1px solid #ffffff;
     }
 
+.title{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .site-title{
+        color: rgb(226, 226, 226);
+        text-align: center;
+        font-size: 50px;
+        -webkit-text-stroke-color: red;
+        -webkit-text-stroke-width: 0.7px;
+    }
+
+
+.image-title{
+    align-items: center;
+    display: flex;
+    height: 150px;
+}
