--- a/css/index.css
+++ b/css/index.css
@@ -7,8 +7,8 @@
 body  {
     font-family: "Helvetica Neue", sans-serif;
     line-height: 1.6;
-    background-color:rgb(0, 0, 0);
-    color: black;
+    background-color:rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 .site-header {
@@ -53,7 +53,7 @@ body  {
         padding: 20px;
         margin-top: 10px;
         margin-left: 25%;
-        border: 1px solid #ffffff;
+        border: 1px solid #000000;
     }
 
 .title{
@@ -62,18 +62,26 @@ body  {
         align-items: center;
         text-align: center;
         justify-content: center;
+        transition: all 0.5s;
+        cursor: pointer;
     }
 
-    .site-title{
-        color: rgb(226, 226, 226);
+    .title:hover{
+    -webkit-transform: scale(1.0);
+    transform: scale(1.3);
+    -webkit-filter: drop-shadow(15px 10px 5px rgba(255, 230, 0, 0.5));
+    filter: drop-shadow(15px 10px 5px rgba(255, 230, 0, 0.5));
+    }
+.article-title{
+        color: rgb(0, 0, 0);
         text-align: center;
         font-size: 50px;
-        -webkit-text-stroke-color: red;
+        -webkit-text-stroke-color: rgb(255, 230, 0);
         -webkit-text-stroke-width: 0.7px;
     }
 
 
-.image-title{
+.article-image{
     align-items: center;
     display: flex;
     height: 150px;
