--- a/css/menu.css
+++ b/css/menu.css
@@ -64,39 +64,53 @@ body  {
     justify-content: space-between;
 }
 
-.site-body{
-    height: auto;
-    width: 40%;
-    margin-left: 15px;
-    border-radius: 25px;
-    background-color: rgba(0, 0, 0, 0.274);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    flex-direction:column;
+.title{
+    text-align: center;
+    transition: all 0.5s;
+    cursor: pointer;
 }
 
-.pizza{
-    display: flex;
-    justify-content: center;
-    width: auto;
-    align-items: center;
-    flex-direction: column;
-}
+.title:hover{
+    -webkit-transform: scale(1.0);
+    transform: scale(1.3);
+    -webkit-filter: drop-shadow(15px 10px 5px rgba(255, 230, 0, 0.5));
+    filter: drop-shadow(15px 10px 5px rgba(255, 230, 0, 0.5));
+    }
 
-#pizza-de-frango{
-    gap: 3000px;
-    width: 8%;
-    border-radius: 100%;
-}
-
-.container {
-    max-width: 600px;
-    margin: 0 auto;
-    background-color: #fff;
+.section-image{
+    background-color: rgb(0, 0, 0);
+    height: 400px;
+    width: 700px;
+    color: rgb(231, 215, 70);
+    text-align: center;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    border: 4px solid rgb(231, 215, 70);
+    justify-content: flex-end;
+    border-radius: 15%;
+    margin-top: 2%;
+}
+
+.central-image{
+    width: 450px;
+    height: 300px;
+    align-items: center;
+    display: flex;
+    margin-top: 10px;
+    justify-content: center;
+    border-radius: 10%;
+    margin-left: 90px;
+}
+
+.central-text {
+    font-size: 17px;
+}
+
+.container{
+    justify-content: space-around;
+    flex-direction: row;
+    display: flex;
+    align-items: center;
 }
 h1 {
     text-align: center;
@@ -104,6 +118,10 @@ h1 {
 form {
     display: flex;
     flex-direction: column;
+    background-color: rgb(0, 0, 0);
+    border-radius: 10px;
+    width: 40%;
+    color: black;
 }
 label {
     margin-bottom: 5px;
@@ -118,12 +136,6 @@ input, select, textarea {
     border: 1px solid #ccc;
     border-radius: 5px;
 }
-
-.main-content {
-    justify-content: center;
-    display: flex;
-}
-
 .site-footer{
     display: flex;
     align-items: flex-end;
