--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,14 @@
     box-sizing: border-box;
 }
 
-body  {
+:root {
+    --cor-header: rgb(231, 215, 70);
+    --cor-footer: rgb(231, 215, 70);
+    --cor-texto: rgb(0, 0, 0);
+    --cor-bg: rgb(231, 215, 70);
+}
+
+body {
     font-family: "Helvetica Neue", sans-serif;
     line-height: 1.6;
     background-image: url(../image/background.png);
@@ -15,8 +22,8 @@ body  {
 }
 
 .site-header {
-    background-color: rgb(231, 215, 70);
-    color: rgb(0, 0, 0);
+    background-color: var(--cor-header);
+    color: var(--cor-texto);
     text-align: center;
     padding: 1rem 0;
     display: flex;
@@ -34,15 +41,15 @@ body  {
     align-items: center;
 }
 
-.main-nav .nav-link{
-    color: rgb(0, 0, 0);
+.main-nav .nav-link {
+    color: var(--cor-texto);
     text-decoration: none;
     margin: 5px;
     font-size: 24.4px;
     transition: color 0.6s;
 }
 
-.main-nav .nav-link:hover{
+.main-nav .nav-link:hover {
     color: rgb(40, 42, 44);
     transition: color 0.6s;
     transform: scale(1.4);
@@ -68,50 +75,48 @@ body  {
 }
 
 .info {
-        background-color: rgb(231,215, 70);
-        height: 20%;
-        width: 50%;
-        color: rgb(0, 0, 0);
-        text-align: center;
-        padding: 20px;
-        margin-top: 10px;
-        margin-left: 25%;
-        border: 1px solid #000000;
-    }
+    background-color: var(--cor-bg);
+    height: 20%;
+    width: 50%;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    padding: 20px;
+    margin-top: 10px;
+    margin-left: 25%;
+    border: 1px solid #000000;
+}
 
-.title{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        text-align: center;
-        justify-content: center;
-        transition: all 0.5s;
-        cursor: pointer;
-    }
+.title {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    transition: all 0.5s;
+    cursor: pointer;
+}
 
-    .title:hover{
-    -webkit-transform: scale(1.0);
+.title:hover {
     transform: scale(1.3);
-    -webkit-filter: drop-shadow(15px 10px 5px rgba(255, 230, 0, 0.5));
     filter: drop-shadow(15px 10px 5px rgba(255, 230, 0, 0.5));
-    }
-.article-title{
-        color: rgb(0, 0, 0);
-        text-align: center;
-        font-size: 50px;
-        -webkit-text-stroke-color: rgb(255, 230, 0);
-        -webkit-text-stroke-width: 0.7px;
-    }
+}
 
+.article-title {
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-size: 50px;
+    -webkit-text-stroke-color: rgb(255, 230, 0);
+    -webkit-text-stroke-width: 0.7px;
+}
 
-.article-image{
+.article-image {
     align-items: center;
     display: flex;
     height: 150px;
 }
 
-.section-image{
-    background-color: rgb(231,215, 70);
+.section-image {
+    background-color: var(--cor-bg);
     height: 450px;
     width: 700px;
     color: rgb(0, 0, 0);
@@ -124,7 +129,7 @@ body  {
     margin-top: 2%;
 }
 
-.central-image{
+.central-image {
     width: 450px;
     height: 300px;
     align-items: center;
@@ -139,18 +144,117 @@ body  {
     font-size: 17px;
 }
 
-.container{
+.container {
     justify-content: space-around;
     flex-direction: row;
     display: flex;
     align-items: center;
 }
 
-.site-footer{
+.site-footer {
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    background-color: rgb(231, 215, 70);
+    background-color: var(--cor-footer);
     align-content: flex-end;
     margin-top: 6.68%;
+}
+
+@media (max-width: 1024px) {
+    .top {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nav-list {
+        width: 100%;
+        justify-content: space-evenly;
+    }
+
+    .article-title {
+        font-size: 40px;
+    }
+
+    .section-image {
+        width: 100%;
+        height: auto;
+    }
+
+    .central-image {
+        width: 100%;
+        height: auto;
+        margin-left: 0;
+    }
+}
+
+@media (max-width: 700px) {
+    .site-header {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .nav-list {
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+    }
+
+    .main-nav .nav-link {
+        font-size: 20px;
+    }
+
+    .info {
+        width: 80%;
+        margin-left: 10%;
+    }
+
+    .section-image {
+        width: 90%;
+        height: auto;
+        margin: 20px auto;
+    }
+
+    .container {
+        flex-direction: column;
+    }
+
+    .central-image {
+        width: 80%;
+        height: auto;
+        margin-left: 0;
+    }
+}
+
+@media (max-width: 700px) {
+    .nav-list {
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .main-nav .nav-link {
+        font-size: 18px;
+        margin: 10px 0;
+    }
+
+    .article-title {
+        font-size: 30px;
+    }
+
+    .section-image {
+        width: 100%;
+        height: auto;
+        margin: 10px 0;
+    }
+
+    .central-image {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .info {
+        width: 90%;
+        margin-left: 5%;
+    }
 }
