--- a/css/menu.css
+++ b/css/menu.css
@@ -15,9 +15,10 @@
     --cor-border:rgb(231, 215, 70);
 }
 
-body  {
+body {
     font-family: "Helvetica Neue", sans-serif;
     line-height: 1.6;
+    background-color: rgb(0, 0, 0);
     color: rgb(0, 0, 0);
 }
 
@@ -77,6 +78,7 @@ body  {
     text-align: center;
     transition: all 0.5s;
     cursor: pointer;
+    color: #fff;
 }
 
 .title:hover{
@@ -111,6 +113,7 @@ body  {
 
 .central-text {
     font-size: 17px;
+    color: rgb(231, 215, 70);
 }
 
 .container{
@@ -122,6 +125,7 @@ body  {
 
 h1 {
     text-align: center;
+    color: #fff;
 }
 
 form {
